--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -4,10 +4,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&display=swap");
 
 body {
-    font-family: "Roboto", sans-serif;
 }
 
 .container {
-    max-width: 1500px;
+    max-width: 1530px;
     margin: 0 auto;
+    padding: 0 15px;
+    font-family: "Roboto", sans-serif;
 }
