--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -3,12 +3,15 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&display=swap");
 
-body {
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 .container {
-    max-width: 1530px;
-    margin: 0 auto;
-    padding: 0 15px;
-    font-family: "Roboto", sans-serif;
+	max-width: 1530px;
+	margin: 0 auto;
+	padding: 0 15px;
+	font-family: "Roboto", sans-serif;
 }
